# smtputt

./: .dockerignore  .git_ignore  .gitignore  Dockerfile  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  smtputt.ini.dist  smtputtsvc.py
.github/workflows/: tests.yaml
smtputt/: __main__.py  channel.py  fixer.py  kwargreg.py  relay.py  server.py  smtpcache.py
smtputt/authorization/: __init__.py  dictauth.py  ldap.py
smtputt/config/: __init__.py  smtputt.ini.dist
smtputt/fixers/: __init__.py  fromaddress.py  fromdate.py
smtputt/relays/: __init__.py  mqtt.py  smtp.py
smtputt/svc/: __init__.py  __main__.py
src/: main.py  smtputtsvc.py
src/smtputt/: smtpcache.py
tests/: fake_smtp.py  smtp_helper.py  test_auth.py  test_authorization.py  test_channel.py  test_fixer.py  test_relay.py  test_server.py  test_svc.py
