[metadata]
name = smtputt-indigoparadox
version = v0.21.3.6
description = Small-scale SMTP mail forwarder and modifier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/indigoparadox/smtputt
protect_urls =
   Bug Tracker = https://github.com/indigoparadox/smtputt/issues
classifiers =
   Programming Language :: Python :: 3
   Development Status :: 4 - Beta
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.6

[options.entry_points]
console_scripts =
   dbfetch = smtputt.__main__:main
